--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -1,4 +1,18 @@
 ---
 import One from './Days/001.astro'
+import Two from './Days/002.astro'
 ---
-<One />
+<section class="challenges">
+    <One />
+    <Two />
+</section>
+<style>
+    .challenges {
+        width: 90vw;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr, 1fr;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        gap: 20px;
+    }
+</style>
