--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -1,10 +1,22 @@
 ---
 import One from './Days/001.astro'
 import Two from './Days/002.astro'
+import Three from './Days/003.astro'
+import Four from './Days/003.astro'
+import Five from './Days/003.astro'
+import Six from './Days/003.astro'
+import Seven from './Days/003.astro'
+import Eight from './Days/003.astro'
 ---
 <section class="challenges">
     <One />
     <Two />
+    <Three />
+    <!-- <Four />
+    <Five />
+    <Six />
+    <Seven />
+    <Eight /> -->
 </section>
 <style>
     .challenges {
