--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -2,18 +2,18 @@
 import One from './Days/001.astro'
 import Two from './Days/002.astro'
 import Three from './Days/003.astro'
-import Four from './Days/003.astro'
-import Five from './Days/003.astro'
-import Six from './Days/003.astro'
-import Seven from './Days/003.astro'
-import Eight from './Days/003.astro'
+import Four from './Days/004.astro'
+// import Five from './Days/005.astro'
+// import Six from './Days/006.astro'
+// import Seven from './Days/007.astro'
+// import Eight from './Days/008.astro'
 ---
 <section class="challenges">
     <One />
     <Two />
     <Three />
-    <!-- <Four />
-    <Five />
+    <Four />
+    <!-- <Five />
     <Six />
     <Seven />
     <Eight /> -->
