--- a/src/components/Days/003.astro
+++ b/src/components/Days/003.astro
@@ -42,7 +42,7 @@
     width: 200px;
     height: 200px;
     background: transparent;
-    animation: background-fade 5s infinite;
+    animation: fade 5s infinite;
     }
 
     .sand {
@@ -101,7 +101,7 @@
     animation: sun 5s infinite;
     }
 
-    @keyframes background {
+    @keyframes .fade {
     0% {
         background: #333;
     }
