--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -4,7 +4,7 @@ import Two from './Days/002.astro'
 import Three from './Days/003.astro'
 import Four from './Days/004.astro'
 import Five from './Days/005.astro'
-// import Six from './Days/006.astro'
+import Six from './Days/006.astro'
 // import Seven from './Days/007.astro'
 // import Eight from './Days/008.astro'
 ---
@@ -14,8 +14,8 @@ import Five from './Days/005.astro'
     <Three />
     <Four />
     <Five />
-    <!-- <Six />
-    <Seven />
+    <Six />
+    <!-- <Seven />
     <Eight /> -->
 </section>
 <style>
