--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,5 +17,12 @@ import Challenges from '../components/Challenges.astro'
 		color: rgb(255, 255, 255);
 		font-size: xx-large;
 		text-align: center;
+		margin: 30px auto 50px;
+	}
+	h1 {
+		margin: 30px auto 0px;
+	}
+	p {
+		margin: 0;
 	}
 </style>
