--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -5,7 +5,7 @@ import Three from './Days/003.astro'
 import Four from './Days/004.astro'
 import Five from './Days/005.astro'
 import Six from './Days/006.astro'
-// import Seven from './Days/007.astro'
+import Seven from './Days/007.astro'
 // import Eight from './Days/008.astro'
 ---
 <section class="challenges">
@@ -15,8 +15,8 @@ import Six from './Days/006.astro'
     <Four />
     <Five />
     <Six />
-    <!-- <Seven />
-    <Eight /> -->
+    <Seven />
+    <!-- <Eight />  -->
 </section>
 <style>
     .challenges {
