--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -6,7 +6,7 @@ import Four from './Days/004.astro'
 import Five from './Days/005.astro'
 import Six from './Days/006.astro'
 import Seven from './Days/007.astro'
-// import Eight from './Days/008.astro'
+import Eight from './Days/008.astro'
 ---
 <section class="challenges">
     <One />
@@ -16,7 +16,7 @@ import Seven from './Days/007.astro'
     <Five />
     <Six />
     <Seven />
-    <!-- <Eight />  -->
+    <Eight /> 
 </section>
 <style>
     .challenges {
