--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -7,6 +7,7 @@ import Five from './Days/005.astro'
 import Six from './Days/006.astro'
 import Seven from './Days/007.astro'
 import Eight from './Days/008.astro'
+import Nine from './Days/009.astro'
 ---
 <section class="challenges">
     <One />
@@ -17,6 +18,7 @@ import Eight from './Days/008.astro'
     <Six />
     <Seven />
     <Eight /> 
+    <Nine /> 
 </section>
 <style>
     .challenges {
