--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -8,6 +8,7 @@ import Six from './Days/006.astro'
 import Seven from './Days/007.astro'
 import Eight from './Days/008.astro'
 import Nine from './Days/009.astro'
+import Ten from './Days/010.astro'
 ---
 <section class="challenges">
     <One />
@@ -19,6 +20,7 @@ import Nine from './Days/009.astro'
     <Seven />
     <Eight /> 
     <Nine /> 
+    <Ten /> 
 </section>
 <style>
     .challenges {
