--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -9,6 +9,8 @@ import Seven from './Days/007.astro'
 import Eight from './Days/008.astro'
 import Nine from './Days/009.astro'
 import Ten from './Days/010.astro'
+import Eleven from './Days/011.astro'
+// import Ten from './Days/010.astro'
 ---
 <section class="challenges">
     <One />
@@ -21,6 +23,7 @@ import Ten from './Days/010.astro'
     <Eight /> 
     <Nine /> 
     <Ten /> 
+    <Eleven /> 
 </section>
 <style>
     .challenges {
