--- a/src/components/Days/010.astro
+++ b/src/components/Days/010.astro
@@ -82,7 +82,7 @@
     stroke-width: 3;
     stroke-dasharray: 618;
     animation: spinn 6s linear infinite;
-    transform-origin: 75px 75px;
+    transform-origin: center;
     }
 
     @keyframes spinn {
