--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -10,7 +10,7 @@ import Eight from './Days/008.astro'
 import Nine from './Days/009.astro'
 import Ten from './Days/010.astro'
 import Eleven from './Days/011.astro'
-// import Ten from './Days/010.astro'
+import Twelve from './Days/012.astro'
 ---
 <section class="challenges">
     <One />
@@ -24,6 +24,7 @@ import Eleven from './Days/011.astro'
     <Nine /> 
     <Ten /> 
     <Eleven /> 
+    <Twelve /> 
 </section>
 <style>
     .challenges {
