--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -11,6 +11,7 @@ import Nine from './Days/009.astro'
 import Ten from './Days/010.astro'
 import Eleven from './Days/011.astro'
 import Twelve from './Days/012.astro'
+import Thirteen from './Days/013.astro'
 ---
 <section class="challenges">
     <One />
@@ -25,6 +26,7 @@ import Twelve from './Days/012.astro'
     <Ten /> 
     <Eleven /> 
     <Twelve /> 
+    <Thirteen />
 </section>
 <style>
     .challenges {
