--- a/src/components/Challenges.astro
+++ b/src/components/Challenges.astro
@@ -12,6 +12,7 @@ import Ten from './Days/010.astro'
 import Eleven from './Days/011.astro'
 import Twelve from './Days/012.astro'
 import Thirteen from './Days/013.astro'
+import Fourteen from './Days/014.astro'
 ---
 <section class="challenges">
     <One />
@@ -27,6 +28,7 @@ import Thirteen from './Days/013.astro'
     <Eleven /> 
     <Twelve /> 
     <Thirteen />
+    <Fourteen />
 </section>
 <style>
     .challenges {
