--- a/src/components/Days/011.astro
+++ b/src/components/Days/011.astro
@@ -10,8 +10,8 @@
   width: 400px;
   height: 400px;
   border-radius: 8px;
-    box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
-    overflow: hidden;
+  box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
+  overflow: hidden;
   background: linear-gradient(to bottom, blanchedalmond 60%, black 40%);
 }
 
@@ -33,7 +33,7 @@
 	height: 150px;
 	background: url('https://100dayscss.com/codepen/doc-martens.svg') center center no-repeat;
 	transition: all;
-	animation: walk 2s infinite ease-in-out;
+	animation: walk 2s infinite linear;
 }
 
 .left {
